--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PB Arquitecto</title>
+    <link rel="icon" href="Imagenes/logo.jpeg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -73,21 +74,25 @@
 
         <nav class="first-section__cercles">
 
-            <div class="first-section__cercles-1">
+            <a href="#trabajo" class="first-section__cercles-1">
 
                 <p>
-                    TEXTO Y/O IMAGEN
+                    <strong>
+                        MODELO DE TRABAJO
+                    </strong>
                 </p>
 
-            </div>
+            </a>
 
-            <div class="first-section__cercles-2">
+            <a href="#proyectos" class="first-section__cercles-2">
 
                 <p>
-                    TEXTO Y/O IMAGEN
+                    <strong>
+                        PROYECTOS
+                    </strong>
                 </p>
 
-            </div>
+            </a>
 
         </nav>
         
@@ -152,7 +157,7 @@
 
         <div class="third-section__button">
 
-            <a class="third-section__button-a">
+            <a href="pbproyectos/proyectos.html" class="third-section__button-a">
                 <strong>Ver más</strong>
             </a>
 
