--- a/pbproyectos/proyectos.html
+++ b/pbproyectos/proyectos.html
@@ -41,7 +41,7 @@
 
                 <p>
                     <strong>
-                        ♦ Todos nuestros proyectos ♦
+                        Todos nuestros proyectos
                     </strong>
                 </p>
             
