--- a/pbproyectos/proyectos.html
+++ b/pbproyectos/proyectos.html
@@ -33,7 +33,7 @@
 
     </header>
 
-    <section class="first-section">
+    <section class="first-section movile">
 
         <div class="first-section__img-container">
 
@@ -97,6 +97,33 @@
 
         </div>
 
+    </section>
+    <section class="first-section dekstop">
+        <div class="first-section__img-container">
+            <header class="first-section__title animation">
+                <p>
+                    <strong>
+                        Todos nuestros proyectos
+                    </strong>
+                </p>
+            </header>
+            <div>
+                <img class="imagen animation" src="../Imagenes/primera.jpeg" alt="">
+                <img class="imagen animation" src="../Imagenes/segunda.jpeg" alt="">
+            </div>
+            <div>
+                <img class="imagen animation" src="../Imagenes/tercera.jpeg" alt="">
+                <img class="imagen animation" src="../Imagenes/cuarta.jpeg" alt="">
+            </div>
+            <div>
+                <img class="imagen animation" src="../Imagenes/primera.jpeg" alt="">
+                <img class="imagen animation" src="../Imagenes/segunda.jpeg" alt="">
+            </div>
+            <div>
+                <img class="imagen animation" src="../Imagenes/tercera.jpeg" alt="">
+                <img class="imagen animation" src="../Imagenes/cuarta.jpeg" alt="">
+            </div>
+        </div>
     </section>
 
 
