--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <header class="header">
         <nav class="header-container">
-            <a href="#" class="header-logo animation">
-                <img src="Imagenes/logo.jpeg" alt="">
-            </a>
+            <h1>
+                PB
+            </h1>
             <a href="#menu" class="header-menu">
                 <div></div>
                 <div></div>
@@ -29,10 +29,21 @@
                 <a href="#contacto" class="header-li-a">Contacto</a>
             </div>
             <div class="header-li-dekstop" id="menu">
-                <a href="#inicio" class="header-li-a">Inicio</a>
-                <a href="#trabajo" class="header-li-a">Servicios</a>
-                <a href="#proyectos" class="header-li-a">Proyectos</a>
-                <a href="#contacto" class="header-li-a">Contacto</a>
+                <div>
+                    <a href="#inicio" class="header-li-a">Inicio</a>
+                </div>
+                <div>
+                    <a href="#trabajo" class="header-li-a">Servicios</a>
+                </div>
+                <div>
+                    <a href="#proyectos" class="header-li-a">Proyectos</a>
+                </div>
+                <div>
+                    <a href="#proyectos" class="header-li-a">Investigación</a>
+                </div>
+                <div>
+                    <a href="#contacto" class="header-li-a">Contacto</a>
+                </div>
             </div>        
         </nav>
     </header>  
@@ -111,7 +122,7 @@
         <nav>
             <div class="second-section__first-txt">
                 <h2>
-                    ¿Qué servicios ofrecemos?
+                    ¿Quienes somos?
                 </h2>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex nemo vel eum, debitis voluptatum fugit dolor velit dolorum, vitae laborum eveniet, blanditiis repudiandae accusamus. Obcaecati impedit quis dolor dolores facilis?
@@ -127,53 +138,62 @@
             </p>
         </nav>
     </section>  
+
+
+
     <section id="proyectos" class="third-section">
-        <header>
-            <h2>Nuestros Proyectos</h2>
-        </header>
-        <nav class="third-section__img-container movile">
-            <img src="Imagenes/primera.jpeg" alt="">
-            <img src="Imagenes/segunda.jpeg" alt="">
-            <img src="Imagenes/tercera.jpeg" alt="">
-            <img src="Imagenes/cuarta.jpeg" alt="">
-            <img src="Imagenes/primera.jpeg" alt="">
-        </nav>
-        <nav class="third-section__img-container dekstop">
-            <div class="third-section__img-container__div">
+        <nav class="third-section-container">
+            <header>
+                <h2>Nuestros Proyectos</h2>
+            </header>
+            <nav class="third-section__img-container movile">
                 <img src="Imagenes/primera.jpeg" alt="">
                 <img src="Imagenes/segunda.jpeg" alt="">
-            </div>
-            <div class="third-section__img-container__div">
                 <img src="Imagenes/tercera.jpeg" alt="">
                 <img src="Imagenes/cuarta.jpeg" alt="">
-            </div>
-            <div class="third-section__img-container__div">
                 <img src="Imagenes/primera.jpeg" alt="">
-                <img src="Imagenes/segunda.jpeg" alt="">
+            </nav>
+            <nav class="third-section__img-container dekstop">
+                <div class="third-section__img-container__div">
+                    <img src="Imagenes/primera.jpeg" alt="">
+                    <img src="Imagenes/segunda.jpeg" alt="">
+                </div>
+                <div class="third-section__img-container__div">
+                    <img src="Imagenes/tercera.jpeg" alt="">
+                    <img src="Imagenes/cuarta.jpeg" alt="">
+                </div>
+                <div class="third-section__img-container__div">
+                    <img src="Imagenes/primera.jpeg" alt="">
+                    <img src="Imagenes/segunda.jpeg" alt="">
+                </div>
+            </nav>
+            <nav class="third-section__img-container dekstop-2">
+                <div class="third-section__img-container__div">
+                    <img src="Imagenes/primera.jpeg" alt="">
+                    <img src="Imagenes/tercera.jpeg" alt="">
+                    <img src="Imagenes/cuarta.jpeg" alt="">
+                </div>
+                <div class="third-section__img-container__div">
+                    <img src="Imagenes/tercera.jpeg" alt="">
+                    <img src="Imagenes/cuarta.jpeg" alt="">
+                    <img src="Imagenes/segunda.jpeg" alt="">
+                </div>
+                <div class="third-section__img-container__div">
+                    <img src="Imagenes/primera.jpeg" alt="">
+                    <img src="Imagenes/segunda.jpeg" alt="">
+                    <img src="Imagenes/tercera.jpeg" alt="">
+                </div>
+            </nav>
+            <div class="container">
+                <a href="pbproyectos/proyectos.html" class="button type--B">
+                    <div class="button__line"></div>
+                    <div class="button__line"></div>
+                    <span class="button__text">VER MÁS</span>
+                    <div class="button__drow1"></div>
+                    <div class="button__drow2"></div>
+                </a>
             </div>
         </nav>
-        <nav class="third-section__img-container dekstop-2">
-            <div class="third-section__img-container__div">
-                <img src="Imagenes/primera.jpeg" alt="">
-                <img src="Imagenes/tercera.jpeg" alt="">
-                <img src="Imagenes/cuarta.jpeg" alt="">
-            </div>
-            <div class="third-section__img-container__div">
-                <img src="Imagenes/tercera.jpeg" alt="">
-                <img src="Imagenes/cuarta.jpeg" alt="">
-                <img src="Imagenes/segunda.jpeg" alt="">
-            </div>
-            <div class="third-section__img-container__div">
-                <img src="Imagenes/primera.jpeg" alt="">
-                <img src="Imagenes/segunda.jpeg" alt="">
-                <img src="Imagenes/tercera.jpeg" alt="">
-            </div>
-        </nav>
-        <div class="third-section__button">
-            <a href="pbproyectos/proyectos.html" class="third-section__button-a">
-                <strong>Ver más</strong>
-            </a>
-        </div>
     </section>
 
 
