--- a/proyectos.html
+++ b/proyectos.html
@@ -31,53 +31,62 @@
     </section>
 
     <section class="second-section">
-
-        <header class="text">
-            <h2>PROYECTOS DESTACADOS</h2>
-        </header>
-
         <nav>
+            <h2 class="proyectos">PROYECTOS</h2>
             <div>
-                <img src="images/image-1.webp" alt="">
-            </div>
-            <div class="text">    
-                <b>TITULO DEL PROYECTO</b>
-            </div>
-            <div>    
-                <p>BREVE<br>DESCRIPCIÓN</p>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
             </div>
             <div>
-                <a href="proyectos.html">VER PROYECTO</a>
-            </div>
-        </nav>
-        
-        <nav>
-            <div>
-                <img src="images/image-1.webp" alt="">
-            </div>
-            <div class="text">    
-                <b>TITULO DEL PROYECTO</b>
-            </div>
-            <div>    
-                <p>BREVE<br>DESCRIPCIÓN</p>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
             </div>
             <div>
-                <a href="proyectos.html">VER PROYECTO</a>
-            </div>
-        </nav>
-
-        <nav class="proyect-container">
-            <div>
-                <img src="images/image-1.webp" alt="">
-            </div>
-            <div class="text">    
-                <b>TITULO DEL PROYECTO</b>
-            </div>
-            <div>    
-                <p>BREVE<br>DESCRIPCIÓN</p>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
             </div>
             <div>
-                <a href="proyectos.html">VER PROYECTO</a>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
+            </div>
+            <div>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
+            </div>
+            <div>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
+            </div>
+            <div>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
+            </div>
+            <div>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
+            </div>
+            <div>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
+            </div>
+            <div>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
+            </div>
+            <div>
+                <a href="https://instagram.com" alt="">
+                    <img src="images/image-1.webp" alt="">
+                </a>
             </div>
         </nav>
     </section>
@@ -119,5 +128,6 @@
     </footer>
 
     <script src="script.js"></script>
+    <script async src="//www.instagram.com/embed.js"></script>
 </body>
 </html>
