--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         
         <nav class="menu" id="menu">
             <ul>
-                <li><a href="#">Opción 1</a></li>
-                <li><a href="#">Opción 2</a></li>
-                <li><a href="#">Opción 3</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <hr>
+                <li><a href="proyectos.html">PROYECTOS</a></li>
+                <hr>
+                <li><a href="#">SOBRE NOSOTROS</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +35,7 @@
     <section class="second-section">
 
         <header class="text">
-            <h2>PROYECTOS DESTACADOS</h2>
+            <h2 class="spacing">PROYECTOS DESTACADOS</h2>
         </header>
 
         <nav>
@@ -41,10 +43,10 @@
                 <img src="images/image-1.webp" alt="">
             </div>
             <div class="text">    
-                <b>TITULO DEL PROYECTO</b>
+                <b class="spacing">TITULO DEL PROYECTO</b>
             </div>
             <div>    
-                <p>BREVE<br>DESCRIPCIÓN</p>
+                <p >BREVE<br>DESCRIPCIÓN</p>
             </div>
             <div>
                 <a href="proyectos.html">VER PROYECTO</a>
@@ -56,7 +58,7 @@
                 <img src="images/image-1.webp" alt="">
             </div>
             <div class="text">    
-                <b>TITULO DEL PROYECTO</b>
+                <b class="spacing">TITULO DEL PROYECTO</b>
             </div>
             <div>    
                 <p>BREVE<br>DESCRIPCIÓN</p>
@@ -71,7 +73,7 @@
                 <img src="images/image-1.webp" alt="">
             </div>
             <div class="text">    
-                <b>TITULO DEL PROYECTO</b>
+                <b class="spacing">TITULO DEL PROYECTO</b>
             </div>
             <div>    
                 <p>BREVE<br>DESCRIPCIÓN</p>
@@ -84,7 +86,7 @@
 
     <footer>
         <nav>
-            <h2>
+            <h2 class="spacing">
                 CONTACT US
             </h2>
             
