--- a/proyectos.html
+++ b/proyectos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles__proyectos.css">
 </head>
 <body>
     <header class="header">
@@ -19,20 +19,18 @@
         
         <nav class="menu" id="menu">
             <ul>
-                <li><a href="#">Opción 1</a></li>
-                <li><a href="#">Opción 2</a></li>
-                <li><a href="#">Opción 3</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <hr>
+                <li><a href="proyectos.html">PROYECTOS</a></li>
+                <hr>
+                <li><a href="#">SOBRE NOSOTROS</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="first-section">
-
-    </section>
-
     <section class="second-section">
         <nav>
-            <h2 class="proyectos">PROYECTOS</h2>
+            <h2 class="proyectos spacing">PROYECTOS</h2>
             <div>
                 <a href="https://instagram.com" alt="">
                     <img src="images/image-1.webp" alt="">
@@ -93,7 +91,7 @@
 
     <footer>
         <nav>
-            <h2>
+            <h2 class="spacing">
                 CONTACT US
             </h2>
             
